tests/baselines/reference/modFunctionCrash.errors.txt
modFunctionCrash.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== modFunctionCrash.ts (1 errors) ====
    declare module Q {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        function f(fn:()=>void); // typechecking the function type shouldnot crash the compiler
    }
    
    
    Q.f(function() {this;});